[package]
name = "linked-web-services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = "1.1.0"
lazy_static = "1.4.0"
local-ip-address = "0.5.6"
regex = "1.10.2"
chrono = "0.4"
url = "2.1"
hostname = { version = "0.3.1", features = [] }